--- a/Stop-Clock/src/Components/clock.css
+++ b/Stop-Clock/src/Components/clock.css
@@ -185,10 +185,11 @@ body {
 
 /* Media Queries for Responsiveness */
 
-/* For devices with width < 768px (Mobile) */
-@media (max-width: 767px) {
+/* For devices with width < 600px (Mobile Phones) */
+@media (max-width: 600px) {
   .outer {
     padding: 10px;
+    justify-content: flex-start;  /* Adjust alignment for mobile */
   }
 
   .header {
@@ -198,14 +199,14 @@ body {
   }
 
   .home {
-    width: 80px;
-    height: 25px;
+    width: 90px;
+    height: 30px;
     font-size: 16px;
   }
 
   .darkLight {
-    width: 100px;
-    height: 40px;
+    width: 110px;
+    height: 45px;
   }
 
   .buttons {
@@ -220,8 +221,8 @@ body {
   }
 
   .timer {
-    width: 150px;
-    height: 150px;
+    width: 160px;
+    height: 160px;
   }
 
   .timer h2 {
@@ -229,8 +230,8 @@ body {
   }
 }
 
-/* For devices with width 768px - 1024px (Tablets) */
-@media (max-width: 1024px) and (min-width: 768px) {
+/* For devices with width 600px - 768px (Small Tablets) */
+@media (max-width: 768px) and (min-width: 601px) {
   .home {
     width: 90px;
     height: 30px;
@@ -255,5 +256,34 @@ body {
 
   .timer h2 {
     font-size: 22px;
+  }
+}
+
+/* For devices with width 768px - 1024px (Tablets) */
+@media (max-width: 1024px) and (min-width: 769px) {
+  .home {
+    width: 100px;
+    height: 35px;
+    font-size: 18px;
+  }
+
+  .darkLight {
+    width: 120px;
+    height: 50px;
+  }
+
+  .buttons button {
+    width: 75px;
+    height: 75px;
+    font-size: 16px;
+  }
+
+  .timer {
+    width: 200px;
+    height: 200px;
+  }
+
+  .timer h2 {
+    font-size: 24px;
   }
 }
