--- a/Stop-Clock/src/Components/clock.css
+++ b/Stop-Clock/src/Components/clock.css
@@ -210,6 +210,7 @@ body {
 
   .buttons {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   gap: 10px;
   margin-top: 20px;
@@ -253,6 +254,7 @@ body {
 
   .buttons {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   gap: 10px;
   margin-top: 20px;
@@ -296,6 +298,7 @@ body {
 
   .buttons {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   gap: 10px;
   margin-top: 20px;
