--- a/Stop-Clock/src/Components/clock.css
+++ b/Stop-Clock/src/Components/clock.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: cursive;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 /* Common transition and layout */
